--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>My App</title>
 </head>
 <body>
+<header>header</header>
 <p>Welcome to my App</p>
+<footer>footer</footer>
 </body>
 </html>
